--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
-title: "Your Name's Portfolio"
-description: "Data Scientist | Machine Learning | AI"
-author: "Your Name"
-github_username: your-username
-linkedin: "your-linkedin-profile"
-email: "your-email@example.com"
-theme: minima  # Change if using a different theme
+title: "My Data Science Portfolio"
+author: "Esther Alo"
+description: "A showcase of my data science projects and skills."
+github_username: aloesther
